--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0;
+    margin: 100;
     padding: 0;
     box-sizing: border-box;
 }
@@ -47,7 +47,7 @@ section {
 }
 
 .section {
-    max-width: 1200px;
+    max-width: auto;
     margin: 0 auto;
 }
 
